2008-01-04  Akim Demaille  <demaille@gostai.com>

	Tidy the casts.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template: Reorder.
	* src/liburbi/uobject/uobject-common.cc (cast): Move to...
	* src/liburbi/uobject/uvalue-common.cc: here.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Do what the previous patches says.
	* src/liburbi/tests/liburbi-check.as: It is quite stupid to remove
        a file just before reading it.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Fix test suite.
	* src/liburbi/tests/liburbi-check.as: It is quite stupid to remove
	a file just before reading it.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	envdir/liburbi.
	* src/liburbi/Makefile.am: Install liburbi in envdir, link to there
	from libdir.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	distcheck.
	* src/liburbi/tests/Makefile.am (clean-local): Remove.
	(check-clean-local): New.
	* src/liburbi/tests/liburbi-check.as: Use children_clean and
	chidren_report.
	Call find_urbi_server in subdir.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Fuse liburbi and libkernel-remote.
	The latter used to be the former plus umain.cc.  That was because it
	was fearer that there could be conflicts between the main from the
	library and the one from the main program itself.  This is not true,
	and MN has checked that it works correcly, even using the VC++ tool
	chain.  Therefore we only need a single library.  Note that it also
	was a problem with Libtool which was shooting in its leg in -j2 when
	linking two libraries using the same sub libraries: it created
	concurrenty twice the same directory with the library files in it.
	* src/liburbi/Makefile.am (libkernel-remote): Remove.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Use cerr for logs.
	* src/liburbi/uabstractclient.cc: Here.
	Remove commented out code.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Clearer logs.
	* src/liburbi/ucallbacks.cc: Use libport::program_name.
	